# llvm-opencl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
examples/mandelbrot/: .gitignore  run.py
test/: .gitignore  __init__.py  __main__.py  misc.py  opencl.py  test.py  translate.py  walker.py
test/01_operations/scalar/int_uint/: __init__.py
test/01_operations/vector/select/: __init__.py
test/01_operations/vector/uint/: __init__.py
test/02_statements/nested/if_else/: source.cl
test/80_performance/mandelbrot/: __init__.py
test/cases/: __init__.py  tester.py
test/cases/00_empty/: __init__.py
test/cases/03_cross/02_c/: lib.c  (+1 more)
test/cases/13_clcpp/: __init__.py
test/examples/: __init__.py
test/examples/mandelbrot/: kernel.cl
test/opencl_tests/: .gitignore  gen_oclc.sh  gen_spir.sh  opencl.py  test.py  translate.py  translate.sh
test/opencl_tests/test_00_empty_kernel/: __init__.py  source.cl
test/opencl_tests/test_01_copy_int/: __init__.py  source.cl
test/opencl_tests/test_02_float_ops/: source.cl
test/opencl_tests/test_03_vector_ops/: __init__.py
test/opencl_tests/test_05_struct/: __init__.py  source.cl
test/opencl_tests/test_06_math/: source.cl
test/opencl_tests/test_07_convert/: __init__.py  source.cl
test/opencl_tests/test_08_signed_ops/: source.cl
test/opencl_tests/test_math/: __init__.py
test/opencl_tests/test_statements/: source.cl
test/performance/: __init__.py
test/performance/mandelbrot/: __init__.py  source.cl
tools/: CMakeLists.txt
tools/llvm-opencl/: CMakeLists.txt  LLVMBuild.txt  llvm-opencl.cpp
(+166 files in other folders)
